--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a professional PUBG Mobile player for Tribe Gaming</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm born and raised in California.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to collect Pokemon cards.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to become a software developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Irvine, California.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I believe it is a very useful skill to have.</p>
     </section>
 
     <footer id="footer">
